# zcsc

./: .gitignore  README.md  requirements.txt
cache/: combined_adjacency.npy  comention_matrix.npy  correlation_adj.npy  embeddings.npy  events.pkl  hawkes_model.pt  mention_counts.pkl  mention_map.pkl  mention_matrix.npy  returns_matrix.csv  semantic_similarity.npy
data/: .gitignore  README_data.md
implementation/rust_edge/: Cargo.toml
implementation/rust_edge/benches/: latency.rs
implementation/rust_edge/src/: lib.rs
implementation/scripts/: evaluate_contagion.py  generate_figures.py  load_fnspid.py  run_ablations.py  train_hawkes.py
implementation/src/: config.py  data_loader.py  embedder.py  entity_extractor.py  evaluator.py  graph_builder.py  neural_hawkes.py  trainer.py  visualizer.py
